# hapa-drama

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  SECURITY.md  launch_hapa_drama_desktop.command  package-lock.json  package.json  pyproject.toml
Apps/HapaDramaApp/: Package.swift
Apps/HapaDramaApp/Sources/HapaDramaApp/: main.swift
Config/: default.toml  dev.toml  prod.toml
contracts/: command.schema.json
docs/: API.md  COMMAND_SCHEMA.md  CULTIVATOR_VOICES.md  CYMATICA_INTEGRATION.md  DESKTOP_ELECTRON.md  FEATURE_PARITY.md  HAPA_CONNECTIVITY.md  TESTING_PROTOCOL.md
ecosystem/: PORTS_AND_AUTH.md  TOPOLOGY.md  VERSIONING.md
electron/: main.cjs
python/hapa_drama_node/: app.py  audio.py  auth.py  card_mint.py  cli.py  config.py  cymatica.py  flow_voiceovers.py  models.py  persistence.py  provenance.py  router.py
python/hapa_drama_node/engines/: base.py  chatterbox_adapter.py  dramabox_adapter.py  macos_speech_adapter.py  mlx_audio_adapter.py  piper_adapter.py  stub_adapter.py
scripts/: bootstrap_python.sh  engine_chatterbox_generate.py  install_desktop_launcher.sh  install_optional_engines.sh  launch_hapa_drama.sh  queue_flow_voiceovers.py  self_test.sh  smoke_latency.sh
tests/: run_api_smoke.py  run_baseline.py  run_optional_engine_matrix.py  run_voice_clone_matrix.py  test_cli.py  test_docs.py  test_mlx_audio_adapter.py  test_router.py
web/: app.css  app.js  index.html
