[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hapa-drama"
version = "0.1.0"
description = "Hapa Drama voice synthesis node for macOS with UI/CLI/API parity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
hapa-drama = "hapa_drama_node.cli:main"

[tool.setuptools.packages.find]
where = ["python"]
